@@ -225,9 +225,6 @@ static void s_m68hc11_relax (int);
 /* Pseudo op to control the ELF flags.  */
 static void s_m68hc11_mode (int);
 
-/* Process directives specified via pseudo ops.  */
-static void s_m68hc11_parse_pseudo_instruction (int);
-
 /* Mark the symbols with STO_M68HC12_FAR to indicate the functions
    are using 'rtc' for returning.  It is necessary to use 'call'
    to invoke them.  This is also used by the debugger to correctly
@@ -316,9 +313,6 @@ const pseudo_typeS md_pseudo_table[] =
 
   /* .interrupt instruction.  */
   {"interrupt", s_m68hc11_mark_symbol, STO_M68HC12_INTERRUPT},
-
-  /* .nobankwarning instruction.  */
-  {"nobankwarning", s_m68hc11_parse_pseudo_instruction, E_M68HC11_NO_BANK_WARNING},
 
   {0, 0, 0}
 };
@@ -1603,8 +1597,11 @@ fixup8 (expressionS *oper, int mode, int opmode)
 
       if (mode == M6811_OP_JUMP_REL)
 	{
-	  fix_new_exp (frag_now, f - frag_now->fr_literal, 1,
-		       oper, TRUE, BFD_RELOC_8_PCREL);
+	  fixS *fixp;
+
+	  fixp = fix_new_exp (frag_now, f - frag_now->fr_literal, 1,
+			      oper, TRUE, BFD_RELOC_8_PCREL);
+	  fixp->fx_pcrel_adjust = 1;
 	}
       else
 	{
@@ -1673,7 +1670,8 @@ fixup16 (expressionS *oper, int mode, int opmode ATTRIBUTE_UNUSED)
 			  reloc == BFD_RELOC_16_PCREL,
                           reloc);
       number_to_chars_bigendian (f, 0, 2);
-
+      if (reloc == BFD_RELOC_16_PCREL)
+	fixp->fx_pcrel_adjust = 2;
       if (reloc == BFD_RELOC_M68HC11_LO16)
         fixp->fx_no_overflow = 1;
     }
@@ -1752,17 +1750,23 @@ fixup8_xg (expressionS *oper, int mode, int opmode)
     {
       if (mode == M68XG_OP_REL9)
         {
+          fixS *fixp;
+
           /* Future improvement:
 	     This fixup/reloc isn't adding on constants to symbols.  */
-          fix_new_exp (frag_now, f - frag_now->fr_literal -1, 2,
-		       oper, TRUE, BFD_RELOC_M68HC12_9_PCREL);
+          fixp = fix_new_exp (frag_now, f - frag_now->fr_literal -1, 2,
+			      oper, TRUE, BFD_RELOC_M68HC12_9_PCREL);
+          fixp->fx_pcrel_adjust = 1;
       	}
       else if (mode == M68XG_OP_REL10)
         {
+          fixS *fixp;
+
           /* Future improvement:
 	     This fixup/reloc isn't adding on constants to symbols.  */
-          fix_new_exp (frag_now, f - frag_now->fr_literal -1, 2,
-    	               oper, TRUE, BFD_RELOC_M68HC12_10_PCREL);
+          fixp = fix_new_exp (frag_now, f - frag_now->fr_literal -1, 2,
+    	      oper, TRUE, BFD_RELOC_M68HC12_10_PCREL);
+          fixp->fx_pcrel_adjust = 1;
         }
       else
         {
@@ -2219,9 +2223,9 @@ build_indexed_byte (operand *op, int format ATTRIBUTE_UNUSED, int move_insn)
 		  byte <<= 3;
 		  byte |= 0xe2;
 		  number_to_chars_bigendian (f, byte, 1);
-		  f = frag_more (2);
 		  fix_new (frag_now, f - frag_now->fr_literal, 2,
 			   sym, off, 0, BFD_RELOC_M68HC12_16B);
+		  f = frag_more (2);
 		  return 1;
 		}
 	      else
@@ -3955,6 +3959,7 @@ void
 md_convert_frag (bfd *abfd ATTRIBUTE_UNUSED, asection *sec ATTRIBUTE_UNUSED,
                  fragS *fragP)
 {
+  fixS *fixp;
   long value;
   long disp;
   char *buffer_address = fragP->fr_literal;
@@ -4007,9 +4012,10 @@ md_convert_frag (bfd *abfd ATTRIBUTE_UNUSED, asection *sec ATTRIBUTE_UNUSED,
       fragP->fr_opcode[1] = fragP->fr_opcode[0];
       fragP->fr_opcode[0] = M6811_OPCODE_PAGE2;
 
-      fix_new (fragP, fragP->fr_fix, 2,
-	       fragP->fr_symbol, fragP->fr_offset, 1,
+      fixp = fix_new (fragP, fragP->fr_fix, 2,
+		      fragP->fr_symbol, fragP->fr_offset, 1,
 		      BFD_RELOC_16_PCREL);
+      fixp->fx_pcrel_adjust = 2;
       fragP->fr_fix += 2;
       break;
 
@@ -4048,9 +4054,9 @@ md_convert_frag (bfd *abfd ATTRIBUTE_UNUSED, asection *sec ATTRIBUTE_UNUSED,
           && fragP->fr_symbol != 0
           && S_GET_SEGMENT (fragP->fr_symbol) != absolute_section)
 	{
-	  fix_new (fragP, fragP->fr_fix, 2,
-	           fragP->fr_symbol, fragP->fr_offset,
-		   1, BFD_RELOC_16_PCREL);
+	  fixp = fix_new (fragP, fragP->fr_fix, 2,
+			  fragP->fr_symbol, fragP->fr_offset,
+			  1, BFD_RELOC_16_PCREL);
 	}
       else
 	{
@@ -4459,8 +4465,8 @@ md_apply_fix (fixS *fixP, valueT *valP, segT seg ATTRIBUTE_UNUSED)
       if (value < 0)
         value += 65536;
 
-      where[0] = (value >> 8);
-      where[1] = (value & 0xff);
+      where[1] = (value >> 8);
+      where[2] = (value & 0xff);
       break;
 
     case BFD_RELOC_M68HC11_RL_JUMP:
@@ -4484,18 +4490,4 @@ m68hc11_elf_final_processing (void)
     elf_flags |= EF_M68HCS12_MACH;
   elf_elfheader (stdoutput)->e_flags &= ~EF_M68HC11_ABI;
   elf_elfheader (stdoutput)->e_flags |= elf_flags;
-}
-
-/* Process directives specified via pseudo ops */
-static void
-s_m68hc11_parse_pseudo_instruction (int pseudo_insn)
-{
-  switch (pseudo_insn)
-    {
-    case E_M68HC11_NO_BANK_WARNING:
-      elf_flags |= E_M68HC11_NO_BANK_WARNING;
-      break;
-    default:
-      as_bad (_("Invalid directive"));
-    }
 }
